[Fix] Increases contrast in boxes and buttons.

--- a/themes/wwwevergreen/css/src/smacss/base/_buttons.scss
+++ b/themes/wwwevergreen/css/src/smacss/base/_buttons.scss
@@ -25,8 +25,8 @@ input[type="submit"]{
 	font-weight: normal;
 	text-shadow: 0 1px 0 $highlight;
 	// decoration
-	background-color: mix($tint, $blueberry-susan, 80%);  // IE 9
-	background-image: linear-gradient(mix($highlight, $blueberry-susan, 85%), mix($tint, $blueberry-susan, 65%));
+	background-color: mix($tint, $blueberry-susan, 90%);  // IE 9
+	background-image: linear-gradient(mix($morning-light, $blueberry-susan, 90%), mix($tint, $blueberry-susan, 80%));
 	border-radius: 0.2em;
 	text-decoration: none;
 	// miscelaneous
@@ -44,7 +44,7 @@ input[type="submit"]:hover{
 	color: mix($shade, $blueberry-susan, 40%);
 	// decoration
 	background-color: mix($tint, $blueberry-susan, 90%);  // IE 9
-	background-image: linear-gradient(mix($highlight, $blueberry-susan, 95%), mix($tint, $blueberry-susan, 75%));
+	background-image: linear-gradient(mix($morning-light, $blueberry-susan, 95%), mix($tint, $blueberry-susan, 75%));
 	border-color: mix($tint, $blueberry-susan, 40%);
 }
 
@@ -52,7 +52,12 @@ button:focus,
 .button:focus,
 input[type="button"]:focus,
 input[type="submit"]:focus{
-	border-color: mix($tint, $shade, 60%);
+	// typography
+	color: mix($shade, $blueberry-susan, 40%);
+	// decoration
+	background-color: mix($tint, $blueberry-susan, 90%);  // IE 9
+	background-image: linear-gradient(mix($morning-light, $blueberry-susan, 95%), mix($tint, $blueberry-susan, 75%));
+	border-color: mix($blueberry-susan);
 	outline-width: 0;
 }
 
@@ -60,9 +65,12 @@ button:active,
 .button:active,
 input[type="button"]:active,
 input[type="submit"]:active{
+	// typography
+	color: $tint;
+	text-shadow: 0 -1px 0 $drop-shadow;
 	// decoration
 	background-color: mix($tint, $blueberry-susan, 40%);  // IE 9
-	background-image: linear-gradient(mix($tint, $blueberry-susan, 40%), mix($highlight, $blueberry-susan, 60%));
+	background-image: linear-gradient(mix($tint, $blueberry-susan, 40%), mix($morning-light, $blueberry-susan, 60%));
 	// miscelaneous
 	box-shadow: inset 0 0.1em 0.2em transparentize(mix($shade, $blueberry-susan, 60%), 0.75);
 }
